CI fix setup-go warnings

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,8 +4,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-go@v5
-    - uses: actions/checkout@v2
-    - run: go get -t ./...
-    - run: go build -v ./...
-    - run: go test -v ./...
+      - uses: actions/setup-go@v5
+        with:
+          go-version: stable
+          cache-dependency-path: go.mod
+      - uses: actions/checkout@v2
+      - run: go get -t ./...
+      - run: go build -v ./...
+      - run: go test -v ./...
